--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,14 +7,22 @@ body {
 }
 
 .main {
-    margin: 50px auto 0 auto;
+    margin: 20px auto 0 auto;
     width: 300px;
     font-size: 18px;
     line-height: 30px;
-    background-color: blue;
+    background-color: #eee;
     border-radius: 6px;
-    padding: 60px;
 
+    .title {
+        margin: 0 35%;
+    }
+
+    img {
+        height: 100px;
+        width: 100px;
+        margin: 0 33%;
+    }
 }
 
 /*  BROWSEHAPPY */
