--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,13 +16,13 @@ body {
 
 .white-house {
     background: url("../images/whitehouse.png") no-repeat;
-    background-size: 58%;
-    background-position-x: 260px;
-    background-position-y: -24px;
+    background-size: 750px;
+    background-position-x: 250px;
+    background-position-y: -40px;
 }
 
 .main {
-    margin: 20px auto;
+    margin: 0 70px;
     width: 1100px;
     font-size: 18px;
     line-height: 30px;
@@ -32,11 +32,11 @@ body {
 }
 
 .head-wrap {
-    margin: 40px 500px 0;
+    margin: 40px 0 0;;
     
     
     .title {
-        margin: 20px -100px 0;
+        margin: 20px 395px 0;
         display: inline-block;
         font-weight: 900;
         font-size: 50px;
