--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,20 +40,15 @@ body {
     height: 400px;
     width: 700px;
     display: inline-block;
-
-    
 }
 
 .main {
     margin: 0 70px;
-    // width: 1100px;
-    // font-size: 18px;
     line-height: 30px;
     background-color: rgba(47, 122, 187, 0.5);
     border-radius: 6px;
     display: block;
 }
-
 
 p {
     text-align: center;
@@ -61,20 +56,20 @@ p {
     padding-top: 80px;
     font-size: 25px;
     display: inline-block;
-    width: 500px;
+    width: 690px;
 }
 
 .logo {
     @include logo;
-    // margin-right: 225px;
 }
 
 .input-wrap {
     border-radius: 10px;
     display: inline-block;
-    margin: 0 auto 15px;
     padding: 30px;
     background: #103F69;
+    vertical-align: top;
+    margin: 60px 0px 300px 0px;
 }
 
 
