put time the bill was created in the #bill-view-template and .bill max-width stylin

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -127,6 +127,7 @@ p {
             margin: 0 auto 15px;
             padding: 30px;
             background: #103F69;
+            max-width: 800px;
         }
 
         .vote {
