--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -115,10 +115,12 @@ p {
     img {
         height: 350px;
         width: 320px;
+        margin: 40px;
     }
 
     .member-name {
         font-size: 40px;
+        margin-bottom: 30px;
     }
 
     .billView {
