added text-align:left to .bill

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -133,6 +133,7 @@ p {
         .bill {
             max-width: 700px;
             display: inline-block;
+            text-align: left;
             @include wrap;
         }
 
