--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -152,8 +152,7 @@ button {
     text-align: center;
     background: #0F3055;
     border-radius: 100%;
-    border: 1px solid #215480;
-    box-shadow: 0px 0px 2px 0px #2f7abb;
+    border: 0;
     display: inline-block;
     margin: 0px 0 0px 0;
     padding: 4px 0 0 0;
