--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -63,7 +63,8 @@ p {
     padding-top: 60px;
     font-size: 25px;
     display: inline-block;
-    width: 690px;
+    max-width: 520px;
+    min-width: 250px;
 }
 
 .logo {
