vote values now the appropriate color

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -138,6 +138,14 @@ p {
             display: inline-block;
             @include wrap;
         }
+
+        .green {
+            color: green;
+        }
+
+        .red {
+            color: red;
+        }
     }
 }
 
