--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -38,6 +38,10 @@ body {
         display: block;
     }  
 
+.logo-wrap {
+    margin-bottom: -20px;
+}
+
 .white-house {
     margin: -35px 85px -138px 0;
     height: 400px;
@@ -53,14 +57,20 @@ body {
     display: block;
 }
 
-p {
+.viewA {
+    p {
     text-align: center;
     margin: 0 50px;
-    padding-top: 60px;
+    padding-top: 50px;
     font-size: 25px;
     display: inline-block;
     max-width: 520px;
     min-width: 250px;
+    }
+
+    h1 {
+        padding-top: 20px;
+    }
 }
 
 .logo {
@@ -97,7 +107,12 @@ p {
 
 .memberView {
     @include wrap;
+    border-radius: 10px;
+    margin: 0px 10px 15px;
+    padding: 30px;
+    background: #103F69;
     width: 400px;
+    display: inline-block;
     
     img {
         margin-right: 10px;
@@ -105,12 +120,17 @@ p {
 
     p {
     text-align: center;
-    margin: 0 50px;
-    padding-top: 60px;
-    font-size: 25px;
-    display: inline-block;
+    margin: 0px;
+    padding-top: 0px;
+    font-size: 20px;
+    display: block;
     max-width: 520px;
-    min-width: 250px;
+    min-width: 0px;
+    }
+
+    img {
+        height: 100px;
+        width: 100px;
     }
 }
 
@@ -169,7 +189,7 @@ button {
     border-radius: 100%;
     border: 0;
     display: inline-block;
-    margin: 0px 0 0px 0;
+    margin: 0px 0 10px 0;
     padding: 4px 0 0 0;
     font-size: 15px;
 }
