--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,6 +89,8 @@ h1 {
     background: #103F69;
     vertical-align: top;
     margin: 0px 0px 20px 50px;
+    border: 1px solid #091A2C;
+    box-shadow: 0px 0px 10px -3px white;
 }
 
 
@@ -188,12 +190,13 @@ button {
     height: 70px;
     text-align: center;
     background: #0F3055;
-    border-radius: 100%;
-    border: 0;
+    border-radius: 10px;
+    border: 1px solid #091A2C;
     display: inline-block;
     margin: 0px 0 10px 0;
     padding: 4px 0 0 0;
     font-size: 15px;
+    box-shadow: 0px 0px 7px -3px white;
 }
 
 button:hover {
