--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -182,6 +182,7 @@ h1 {
         .bill {
             display: inline-block;
             max-width: 400px;
+            margin: 0 0 20px 50px;
         }
 
         .created {
