logo adjustment. added readme

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,7 @@
 
 // MIXINS
 @mixin logo(){
-    height: 200px;
-    width: 200px;
+    width: 17%;
     display: inline-block;
     margin: 0px 10px 0px;
 }
@@ -46,8 +45,7 @@ body {
 }
 
 .white-house {
-    height: 325px;
-    width: 700px;
+    width: 20%;
     display: inline-block;
 }
 
