--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -146,14 +146,18 @@ h1 {
     padding: 20px 0 0 0;
 
     img {
-        height: 350px;
-        width: 320px;
-        margin: 40px;
+        margin: 40px 0 10px;
     }
 
     .member-name {
         font-size: 40px;
         margin-bottom: 30px;
+    }
+
+    .bills {
+        height: 500px;
+        overflow: scroll;
+        margin-bottom: 50px;
     }
 
     .billView {
@@ -229,7 +233,7 @@ a {
 
 .btn-wrap {
     width: 400px;
-    margin: 45px auto;
+    margin: 0px auto;
 }
 
 
