just tryin things out

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -245,4 +245,11 @@ a {
     padding: 0.2em 0;
 }
 
+.joe {
+    width: 100%;
+    height: 300px;
+    margin: 10px 0;
+    background: red;
+}
+
 //          trash
