keyword search prep

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -154,6 +154,10 @@ h1 {
         margin-bottom: 30px;
     }
 
+    .keyword-search {
+        margin-bottom: 30px;
+    }
+
     .bills {
         height: 500px;
         overflow: scroll;
@@ -176,8 +180,6 @@ h1 {
 
             .vote {
                 margin-top: 20px;
-
-
             }
         }
 
@@ -245,11 +247,5 @@ a {
     padding: 0.2em 0;
 }
 
-.joe {
-    width: 100%;
-    height: 300px;
-    margin: 10px 0;
-    background: red;
-}
 
 //          trash
